Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2008
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.4.xx
DATE xx/xx/200x
20th Alpha Release

NEWS:


NEW: [features/improvements]


BUG FIXES:
+Fix find in files where if the filter was empty no files were searched.
+Buffer context menu now works correctly on gtk version.
+Fix column mode keybinding on windows.
+Unicode fixes

#-----------------------------------------------------------------------------#

VERSION 0.4.20
DATE 12/12/2008
19th Alpha Release

NEWS:

This release fixes a number of of bugs and general stability issues introduced
from the last few rounds of feature enhancements. In addition to these bug
fixes a few new features such as a column edit mode and more improvements to
the text searching features have been added.


NEW: [features/improvements]
+Add shortcut for Find Previous
+Column edit mode
+New version of Launch plugin (Run last executed program)
+Read Only indicators on tabs
+Add support for Progress 4GL
+Middle click can close tabs in Shelf
+Add custom highlighting for Issue Lists (from Torsten Mohr)
+Report number of files searched when doing a Find in Files
+Improve performance of Find All.
+Add ability to filter file type to Find in Files.
+Add commandline option to run Editra in the hotshot profiler.
+Numerous minor performance improvements.
+Add Swedish translation (by Peter Magnusson)

BUG FIXES:
+Middle click closes the tab that was clicked on and not the active tab.
+Fix Find dialog not preserving order of lookin choices.
+Fix searching in folded text not being exposed during search.
+Fix random jumping to top/bottom of file during incremental search.
+Fix text Drag n Drop not working on Windows.
+Don't show Python auto-comp choices after numbers.
+Fix file modified indicator not being hidden after saving file.